# ocaml-typechecker

./: Makefile  README.md
src/: dune  error.ml  error.mli  lexer.mll  locations.ml  locations.mli  main.ml  parser.mly  print.ml  print.mli  syntax.ml  syntax.mli  type.ml  type.mli  typing.ml  typing.mli  util.ml  util.mli
test/: DuneRule.ml  Test.ml  dune
test/inputs/: Makefile  check_leq_expand_T4.eager.exp  check_leq_expand_T4.fw  check_leq_expand_T4.lazy.exp  church_bool_T1.eager.exp  church_bool_T1.fw  church_bool_T2.eager.exp  church_bool_T2.fw  church_bool_T2.lazy.exp  church_exists_ho_T3.eager.exp  church_exists_ho_T3.fw  church_exists_ho_T3.lazy.exp  church_exists_ho_test_T3.eager.exp  church_exists_ho_test_T3.fw  church_exists_ho_test_T3.lazy.exp  church_sum_T3.eager.exp  church_sum_T3.fw  church_sum_T3.lazy.exp  core_sf_T1.eager.exp  core_sf_T1.fw  dune  dune.auto  escaping_lam_T4.eager.exp  escaping_lam_T4.fw  escaping_lam_T4.lazy.exp  exist_int_or_bool_T2.eager.exp  exist_int_or_bool_T2.fw  exists_basic_T2.fw  exists_basic_T2.lazy.exp  exp_let_rec_annot_X3.fw  expand_order_T4.eager.exp  expand_order_T4.fw  expand_order_T4.lazy.exp  fact_T1.fw  fail_check_leq_expand_T4.eager.exp  fail_check_leq_expand_T4.fw  fail_check_leq_expand_T4.lazy.exp  fail_escaping_lam_T4.eager.exp  fail_escaping_lam_T4.fw  fail_escaping_lam_T4.lazy.exp  (+60 more)
